--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@emotion/css": "^11.1.3",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
