--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "serve": "vite preview"
-  },
-  "dependencies": {
-    "@emotion/css": "^11.1.3",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
-  },
-  "devDependencies": {
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@vitejs/plugin-react-refresh": "^1.3.1",
-    "typescript": "^4.3.2",
-    "vite": "^2.3.7"
-  }
+	"version": "0.0.0",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"serve": "vite preview",
+		"check": "xo"
+	},
+	"dependencies": {
+		"@emotion/css": "^11.1.3",
+		"react": "^17.0.0",
+		"react-dom": "^17.0.0"
+	},
+	"devDependencies": {
+		"@types/react": "^17.0.0",
+		"@types/react-dom": "^17.0.0",
+		"@vitejs/plugin-react-refresh": "^1.3.1",
+		"typescript": "^4.3.2",
+		"vite": "^2.3.7",
+		"xo": "^0.40.2"
+	}
 }
