--- a/.xo-config.json
+++ b/.xo-config.json
@@ -1,3 +1,12 @@
 {
-	"prettier": true
+	"ignores": [
+		"./setup-tests.ts",
+		"./jest.config.js",
+		"./vite.config.ts",
+		"__mocks__"
+	],
+	"prettier": true,
+	"rules": {
+		"unicorn/filename-case": "off"
+	}
 }
