--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
 		"dev": "vite",
 		"build": "tsc && vite build",
 		"serve": "vite preview",
-		"check": "xo"
+		"check": "xo",
+		"format": "xo --fix",
+		"test": "NODE_ENV=test jest src",
+		"test:watch": "yarn test --watch"
 	},
 	"dependencies": {
 		"@emotion/css": "^11.1.3",
@@ -12,11 +15,19 @@
 		"react-dom": "^17.0.0"
 	},
 	"devDependencies": {
+		"@testing-library/jest-dom": "^5.14.1",
+		"@testing-library/react": "^11.2.7",
+		"@types/jest": "^26.0.23",
+		"@types/node": "^15.12.4",
 		"@types/react": "^17.0.0",
 		"@types/react-dom": "^17.0.0",
 		"@vitejs/plugin-react-refresh": "^1.3.1",
+		"identity-obj-proxy": "^3.0.0",
+		"jest": "^27.0.4",
+		"ts-jest": "^27.0.3",
 		"typescript": "^4.3.2",
 		"vite": "^2.3.7",
+		"vite-plugin-svgr": "^0.3.0",
 		"xo": "^0.40.2"
 	}
 }
