--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
 	},
 	"dependencies": {
 		"@emotion/css": "^11.1.3",
+		"@emotion/react": "^11.4.0",
+		"@emotion/styled": "^11.3.0",
+		"@loadable/component": "^5.15.0",
+		"@types/react-router-dom": "^5.1.7",
 		"react": "^17.0.0",
-		"react-dom": "^17.0.0"
+		"react-dom": "^17.0.0",
+		"react-router-dom": "^5.2.0"
 	},
 	"devDependencies": {
 		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/react": "^11.2.7",
 		"@types/jest": "^26.0.23",
+		"@types/loadable__component": "^5.13.3",
 		"@types/node": "^15.12.4",
 		"@types/react": "^17.0.0",
 		"@types/react-dom": "^17.0.0",
