--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"check": "xo",
 		"format": "xo --fix",
 		"test": "NODE_ENV=test jest src",
-		"test:watch": "yarn test --watch"
+		"test:watch": "yarn test --watch",
+		"sw:dev": "NODE_ENV=development workbox generateSW workbox-config.js"
 	},
 	"dependencies": {
 		"@emotion/css": "^11.1.3",
@@ -30,9 +31,11 @@
 		"@vitejs/plugin-react-refresh": "^1.3.1",
 		"identity-obj-proxy": "^3.0.0",
 		"jest": "^27.0.4",
+		"rollup-plugin-workbox": "^6.1.1",
 		"ts-jest": "^27.0.3",
 		"typescript": "^4.3.2",
 		"vite": "^2.3.7",
+		"vite-plugin-pwa": "^0.8.1",
 		"vite-plugin-svgr": "^0.3.0",
 		"xo": "^0.40.2"
 	}
