--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
 		"lib": [
 			"DOM",
 			"DOM.Iterable",
-			"ESNext"
+			"ESNext",
 		],
 		"allowJs": false,
 		"skipLibCheck": false,
@@ -21,7 +21,8 @@
 		"types": [
 			"jest",
 			"@testing-library/jest-dom",
-			"vite/client"
+			"vite/client",
+			"vite-plugin-pwa/client"
 		],
 		"baseUrl": "."
 	},
