--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
 		"@emotion/styled": "^11.3.0",
 		"@loadable/component": "^5.15.0",
 		"@types/react-router-dom": "^5.1.7",
+		"i18next": "^20.3.2",
+		"i18next-browser-languagedetector": "^6.1.2",
 		"react": "^17.0.0",
 		"react-dom": "^17.0.0",
+		"react-i18next": "^11.11.0",
 		"react-router-dom": "^5.2.0"
 	},
 	"devDependencies": {
