--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@types/react-router-dom": "^5.1.7",
 		"i18next": "^20.3.2",
 		"i18next-browser-languagedetector": "^6.1.2",
+		"localforage": "^1.9.0",
 		"react": "^17.0.0",
 		"react-dom": "^17.0.0",
 		"react-i18next": "^11.11.0",
